[tool.poetry]
name = "sqlalchemy-model-factory"
version = "0.1.2"
description = "A library to assist in generating models from a central location."
authors = ["Dan Cardin <ddcardin@gmail.com>"]
license = "Apache-2.0"
keywords = [ "sqlalchemy", "model", "factory", "pytest" ]
repository = "https://github.com/dancardin/sqlalchemy-model-factory"
packages = [
    { include = "sqlalchemy_model_factory", from = "src" },
]
readme = 'README.md'
include = [
    "*.md",
]

[tool.poetry.dependencies]
python = ">=3.5"

sqlalchemy = "*"
pytest = {version = ">=1.0", optional = true}

sphinx = {version = "*", optional = true}
m2r = {version = "*", optional = true}
sphinx_rtd_theme = {version = "*", optional = true}
sphinx_autodoc_typehints = {version = "*", optional = true}
sphinx-autobuild = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "=>19.3b0", allows-prereleases = true, python = ">=3.6"}
coverage = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pydocstyle = ">=4.0.0"
pytest = "*"
sqlalchemy-stubs = "*"

[tool.poetry.extras]
pytest = ['pytest']
docs = ['sphinx', 'm2r', 'sphinx_rtd_theme', 'sphinx-autobuild']

[tool.poetry.plugins.pytest11]
model_manager = "sqlalchemy_model_factory.pytest"

[tool.isort]
default_section = 'FIRSTPARTY'
include_trailing_comma = true
indent = '    '
length_sort = false
line_length = 88
multi_line_output = 3
order_by_type = false
known_first_party = 'tests'
use_parentheses = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
