[tool.poetry]
name = "sqlalchemy-model-factory"
version = "0.4.6"
description = "A library to assist in generating models from a central location."
authors = ["Dan Cardin <ddcardin@gmail.com>"]
license = "Apache-2.0"
keywords = [ "sqlalchemy", "model", "factory", "pytest" ]
repository = "https://github.com/dancardin/sqlalchemy-model-factory"
packages = [
    { include = "sqlalchemy_model_factory", from = "src" },
]
readme = 'README.md'
include = [
    "*.md",
    "py.typed",
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4"

sqlalchemy = "*"
typing_extensions = ">=3.10"
pytest = {version = ">=1.0", optional = true}

[tool.poetry.dev-dependencies]
black = "22.3.0"
coverage = [
    {version = ">=7", python = ">=3.7"},
    {version = ">=6", python = "<3.7"},
]
flake8 = "*"
isort = ">=5"
mypy = "*"
pydocstyle = ">=4.0.0"
pytest = "*"
sqlalchemy-stubs = "*"

[tool.poetry.extras]
pytest = ['pytest']

[tool.poetry.plugins.pytest11]
model_manager = "sqlalchemy_model_factory.pytest"

[tool.isort]
default_section = 'FIRSTPARTY'
known_first_party = 'tests'
length_sort = false
order_by_type = false
profile = 'black'

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
